--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.13.2",
+    "body-parser": "1.19.1",
     "cookie-parser": "~1.3.5",
-    "debug": "~2.2.0",
+    "debug": "~4.3.4",
     "express": "~4.13.1",
     "jade": "~1.11.0",
-    "morgan": "~1.6.1",
+    "morgan": "1.9.1",
     "serve-favicon": "~2.3.0"
   }
 , "devDependencies": {
-  "mocha": "1.7.0"
+  "mocha": "10.1.0"
 , "should": "1.2.1"
 , "supertest": "0.4.0"
 }
